# openadr-test-vtn

./: .env.sample  .gitignore  Cargo.toml  LICENSE  README.md  Secrets.example.toml  Secrets.test.toml  Shuttle.toml
.cargo/: config.example.toml  config.toml
src/: main.rs  router.rs
src/handlers/: auth.rs  clear_events_list.rs  events.rs  generate_initial_subscription.rs  generate_polled_event.rs  mod.rs  ping.rs  subscription.rs  trigger_subscription_event.rs
src/utils/: authorizer.rs  create_test_oadr_event.rs  init_event_storage.rs  init_storage.rs  mod.rs  openadr_models.rs
