[package]
name = "ce_app_kempower_vtn"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-macros = "0.4.1"
chrono = "0.4.38"
reqwest = { version = "0.12.7", features = ["default", "json", "multipart"] }
serde = { version = "1.0.210", features = ["derive", "serde_derive", "std"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
dotenvy = "0.15.7"
dashmap = "6.1.0"
shuttle-runtime = "0.48.0"
shuttle-axum = "0.48.0"
shuttle-common = "0.48.0"
